CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_notes__x.object
<CustomObject>
    <description>batchsit$t_auth_notes</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_notes</externalName>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Notes</relationshipLabel>
        <relationshipName>batchsit_t_auth_notes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_notes_auth__c</fullName>
        <description>idn_notes_auth</description>
        <externalDeveloperName>idn_notes_auth</externalDeveloperName>
        <label>Identifier Notes authorization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_notes__c</fullName>
        <description>txt_notes</description>
        <externalDeveloperName>txt_notes</externalDeveloperName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Authorization Note</label>
    <pluralLabel>Authorization Notes</pluralLabel>
</CustomObject>